@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   137: AstroFloyd, 23/08/2010
+     - plotmdl: make array dat() of type double
+     
    136: AstroFloyd, 22/08/2010
      - Consistently use ev for the code name and evTools for the package name
    
